# RoadConnect

./: .gitignore  Data_Acq.py  Model.py  README.md  RoadConnect.qgz  config.json  pyproject.toml
config/: config.json
src/model/: __init__.py  base.py  graph.py  main.py
src/model/data/: __init__.py  drains.py  elevation.py  flowpaths.py  ponds.py  roads.py
src/utils/: config.py  funcs.py
test_data/: drains.shp  elevation.tif  flowpaths.qmd  flowpaths.shx  flowpaths_invalid.shp  flowpaths_invalid.shx  ponds.dbf  ponds.shx
user_data/: drains.shp  drains.shx  elevation.tif.aux.xml  flowpaths.dbf  flowpaths.shp  flowpaths.shx  flowpaths_invalid.qmd  ponds.dbf  ponds.qmd  ponds.shp  ponds.shx  roads.dbf  roads.shp  roads.shx  roads_w_connectivity.dbf
