[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RoadConnect"
version = "0.0.1"
authors = [
  { name = "Rushi Bhatt" },
]
description = "A road runoff and sediment model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Core dependencies
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "shapely>=2.0.7",
    "networkx",
    "rasterio",
    "tqdm",
]

# Command-line scripts/entry points
[project.scripts]
roadconnect = "model.main:main"

[project.urls]
Homepage = "https://github.com/bhatt-rushi/RoadConnect"
Issues = "https://github.com/bhatt-rushi/RoadConnect/issues"
Source = "https://github.com/bhatt-rushi/RoadConnect"

# Setuptools-specific configuration
[tool.setuptools.packages.find]
where = ["src"]
